--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ nav {
   height: 50px;
   background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
 }
+
 h1 {
   color: white;
 }
@@ -31,6 +32,7 @@ h1 {
   text-decoration: none;
   font-size: large;
   color: white;
+  transition: all 0.7s;
 }
 
 .nav-link:hover {
@@ -42,6 +44,7 @@ h1 {
   text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.692);
   transition: all 0.5s;
 }
+
 main {
   height: 90vh;
   width: 90vw;
@@ -55,8 +58,9 @@ main {
   display: flex;
   justify-content: space-between;
   gap: 5em;
-  border: 2px solid #00000026;
+  border: 1px solid #00000026;
 }
+
 .avatar-image {
   width: 300px;
   height: 300px;
