--- a/style.css
+++ b/style.css
@@ -7,32 +7,54 @@ body {
   flex-direction: column;
   margin: 0;
   padding: 0;
+  background: url(assets/kofe_chashka_dereviannaia_poverhnost_106291_1920x1080.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 nav {
-  padding: 0 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px 100px;
+  /* padding: 0 20px; */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  /* height: 50px; */
+  z-index: 99;
   background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
 }
 
 h1 {
-  color: white;
+  color: #124e65;
+}
+h2 {
+  color: #ffb855;
 }
 
 .nav-list {
   list-style: none;
-  display: flex;
+  /* display: flex;
   justify-content: end;
-  gap: 1rem;
+  gap: 1rem; */
 }
 
 .nav-link {
   text-decoration: none;
   font-size: large;
-  color: white;
+  color: #e2db99;
   transition: all 0.7s;
+}
+
+.nav-link::after{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #fff;
+  border-radius: 5px;
+  left: 0;
 }
 
 .nav-link:hover {
@@ -53,21 +75,35 @@ main {
 }
 
 .about {
-  margin-top: 20px;
+  margin-top: 40px;
   padding: 20px;
   display: flex;
   justify-content: space-between;
   gap: 5em;
-  border: 1px solid #00000026;
+  /* border: 1px solid #00000026; */
+  border: 2px solid #fffacd70;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  color: #e2db99;
 }
 
 .avatar-image {
   width: 300px;
   height: 300px;
-  border: 2px solid #00000026;
+  border: 2px solid #fffacd70;
   border-radius: 50%;
 }
 
 .about-text{
   line-height:  1.5em;
 }
+/* Contacts */
+.contacts {
+  margin-top: 40px;
+  padding: 20px;
+  border: 2px solid #fffacd70;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  color: #e2db99;
+}
+
