--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 body {
   min-height: 100vh;
   display: flex;
@@ -98,7 +101,7 @@ main {
   line-height:  1.5em;
 }
 /* Contacts */
-.contacts, .skills {
+.contacts, .skills, .projects {
   margin-top: 40px;
   padding: 20px;
   border: 1px solid #fffacd70;
@@ -119,4 +122,74 @@ main {
   text-shadow: 1px 1px 3px #e2db99d7;
   transition: all .3s;
 }
+hr {
+  margin: 10px 0;
+  border-color:#e2db99;
+}
+.contacts-description p{
+  margin-left: 20px;
+}
 
+.skills-card-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.skill-card, .projects-card{
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  text-align: center;
+}
+.skill-img {
+  width: 100px;
+  height: 100px;
+}
+.projects-card-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:space-around;
+}
+.projects-card{
+  width: 30%;
+}
+
+.projects-card>a{
+  width: 100%;
+  position: relative;
+}
+
+.projects-img {
+  width: 100%;
+  height: 200px;
+  border: 1px solid #e2db99;
+  border-radius: 15px;
+  transition: all .5s;
+}
+
+.projects-img:hover {
+  opacity: .5;
+  transition: all .5s;
+}
+/* .projects-card:hover .overlay{
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  transition: .5s ease;
+  opacity:0;
+  color: white;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+} */
