--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: url(assets/kofe_chashka_dereviannaia_poverhnost_106291_1920x1080.jpg) no-repeat;
+  /* background: url(assets/kofe_chashka_dereviannaia_poverhnost_106291_1920x1080.jpg) no-repeat; */
+  background: url(assets/gradient.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -28,16 +29,21 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 99;
-  background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%);
+  /* background-image: linear-gradient(-60deg, #16a085 0%, #f4d03f 100%); */
+  /* background: linear-gradient(to bottom, #323232 0%, #3F3F3F 40%, #1C1C1C 150%), linear-gradient(to top, rgba(255, 255, 255, 0.40) 0%, rgba(0, 0, 0, 0.25) 200%); */
+  /* background-blend-mode: multiply; */
+  background-color: #323232a8;
 }
 
 h1 {
-  color: #124e65;
+  font-family: 'Roboto Serif', serif;
+  color: #ffb855;
   user-select: none;
 }
 
 h2 {
   color: #ffb855;
+  font-family: 'Roboto Serif', serif;
 }
 
 .nav-link {
@@ -46,18 +52,8 @@ h2 {
   font-size: large;
   margin-left: 20px;
   color: #e2db99;
+  font-family: 'Roboto Mono', monospace;
 }
-
-@media (hover: hover) {
-  .nav-link:hover {
-    display: inline-block;
-    transform: scale(1.1);
-    text-shadow: 1px 1px 3px #e2db99d7;
-    transition: all .5s;
-  }
-
-}
-
 
 .nav-link::after {
   content: '';
@@ -65,12 +61,29 @@ h2 {
   left: 0;
   bottom: -6px;
   width: 100%;
-  height: 3px;
+  height: 1px;
   background: #e2db99;
   border-radius: 5px;
   transform: scaleX(0);
   transform-origin: right;
   transition: transform .5s;
+}
+
+@media (hover: hover) {
+  .nav-link:hover {
+    display: inline-block;
+    /* transform: scale(1.1); */
+    /* text-shadow: 1px 1px 3px #e2db99d7; */
+    color: #ffb855;
+    transition: all .5s;
+  }
+  .nav-link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+    background: #ffb855;
+    /* transition: transform .5s; */
+  }
+
 }
 
 
@@ -88,6 +101,7 @@ main {
   gap: 5em;
   border: 1px solid #fffacd70;
   border-radius: 20px;
+  background: #32323254;
   backdrop-filter: blur(10px);
   color: #e2db99;
 }
@@ -101,6 +115,7 @@ main {
 
 .about-text {
   line-height: 1.5em;
+  font-family: 'Roboto Mono', monospace;
 }
 
 /* Contacts */
@@ -112,6 +127,7 @@ main {
   padding: 20px;
   border: 1px solid #fffacd70;
   border-radius: 20px;
+  background: #32323254;
   backdrop-filter: blur(10px);
   color: #e2db99;
   line-height: 1.5em;
@@ -128,10 +144,12 @@ main {
 hr {
   margin: 10px 0;
   border-color: #e2db99;
+  transform: scaleY(0.5);
 }
 
 .contacts-description p {
   margin-left: 20px;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .skills-card-wrapper {
@@ -148,6 +166,7 @@ hr {
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  font-family: 'Roboto Mono', monospace;
   text-align: center;
 }
 
@@ -201,11 +220,13 @@ hr {
   display: flex;
   flex-direction: column;
   align-items: start;
+  font-family: 'Roboto Mono', monospace;
 }
 
 .education a {
   text-decoration: none;
-  font: 1.2em sans-serif;
+  font: 1.2em;
+  font-family: 'Roboto Serif', serif;
   color: #e2db99;
   margin: 10px 20px;
   transition: all .3s;
@@ -227,7 +248,8 @@ hr {
   /* border: 1px solid #fffacd70;
   border-radius: 20px; */
   /* backdrop-filter: blur(10px); */
-  background-image: linear-gradient(-60deg, #f4d03f 0%, #16a085 100%);
+  /* background-image: linear-gradient(-60deg, #f4d03f 0%, #16a085 100%); */
+  background-color: #323232a8;
 }
 
 .footer-div {
@@ -237,9 +259,10 @@ hr {
 
 .footer-div a {
   text-decoration: none;
-  color: #124e65;
+  color: #e2db99;
   font-size: 1.2em;
   transition: all .3s;
+  font-family: 'Roboto Serif', serif;
 }
 
 
@@ -249,12 +272,6 @@ hr {
 }
 
 @media (hover: hover) {
-
-  .nav-link:hover::after {
-    transform: scaleX(1);
-    transform-origin: left;
-    transition: transform .5s;
-  }
 
   .contacts a:hover,
   .about-text a:hover {
@@ -275,15 +292,11 @@ hr {
     transition: all .3s;
   }
 
-  .copyright a:hover {
+  .footer-div a:hover {
     color: #f4d03f;
     transition: all .3s;
   }
 
-  .rsschool a:hover {
-    color: #16a085;
-    transition: all .3s;
-  }
 }
 
 @media screen and (max-width: 820px) {
@@ -351,13 +364,14 @@ hr {
     justify-content: center;
     text-align: center;
   }
-  
+
   nav {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1.1em;
   }
+
   .nav-link {
     margin-left: 0;
   }
@@ -366,7 +380,8 @@ hr {
     width: 90%;
     height: 90%;
   }
-  .empty{
+
+  .empty {
     display: none;
   }
 
