--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+  /* --main-dark: #ffb855;
+  --main-light: #e2db99; */
+  --main-dark: #613131;
+  --main-light: #e5d9d9;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -37,12 +44,12 @@ header {
 
 h1 {
   font-family: 'Roboto Serif', serif;
-  color: #ffb855;
+  color: var(--main-dark);
   user-select: none;
 }
 
 h2 {
-  color: #ffb855;
+  color: var(--main-dark);
   font-family: 'Roboto Serif', serif;
 }
 
@@ -51,7 +58,7 @@ h2 {
   text-decoration: none;
   font-size: large;
   margin-left: 20px;
-  color: #e2db99;
+  color: var(--main-light);
   font-family: 'Roboto Mono', monospace;
 }
 
@@ -62,7 +69,7 @@ h2 {
   bottom: -6px;
   width: 100%;
   height: 1px;
-  background: #e2db99;
+  background: var(--main-light);
   border-radius: 5px;
   transform: scaleX(0);
   transform-origin: right;
@@ -74,13 +81,13 @@ h2 {
     display: inline-block;
     /* transform: scale(1.1); */
     /* text-shadow: 1px 1px 3px #e2db99d7; */
-    color: #ffb855;
+    color: var(--main-dark);
     transition: all .5s;
   }
   .nav-link:hover::after {
     transform: scaleX(1);
     transform-origin: left;
-    background: #ffb855;
+    background: var(--main-dark);
     /* transition: transform .5s; */
   }
 
@@ -99,17 +106,18 @@ main {
   display: flex;
   justify-content: space-between;
   gap: 5em;
-  border: 1px solid #fffacd70;
+  /* border: 1px solid #fffacd70; */
+  border: 1px solid var(--main-dark);
   border-radius: 20px;
   background: #32323254;
   backdrop-filter: blur(10px);
-  color: #e2db99;
+  color: var(--main-light);
 }
 
 .avatar-image {
   width: 300px;
   height: 300px;
-  border: 2px solid #fffacd70;
+  border: 1px solid var(--main-light);
   border-radius: 50%;
 }
 
@@ -125,11 +133,12 @@ main {
 .education {
   margin-top: 40px;
   padding: 20px;
-  border: 1px solid #fffacd70;
+  /* border: 1px solid #fffacd70; */
+  border: 1px solid var(--main-dark);
   border-radius: 20px;
   background: #32323254;
   backdrop-filter: blur(10px);
-  color: #e2db99;
+  color: var(--main-light);
   line-height: 1.5em;
 }
 
@@ -137,13 +146,13 @@ main {
 .about-text a {
   text-decoration: none;
   font-size: large;
-  color: #e2db99;
+  color: var(--main-light);
   transition: all .5s;
 }
 
 hr {
   margin: 10px 0;
-  border-color: #e2db99;
+  border-color: var(--main-light);
   transform: scaleY(0.5);
 }
 
@@ -193,7 +202,7 @@ hr {
 .projects-img {
   width: 100%;
   height: 200px;
-  border: 1px solid #e2db99;
+  border: 1px solid var(--main-light);
   border-radius: 15px;
   transition: all .5s;
 }
@@ -227,7 +236,7 @@ hr {
   text-decoration: none;
   font: 1.2em;
   font-family: 'Roboto Serif', serif;
-  color: #e2db99;
+  color: var(--main-light);
   margin: 10px 20px;
   transition: all .3s;
 }
@@ -235,7 +244,7 @@ hr {
 .education-text {
   margin-left: 40px;
   padding-left: 10px;
-  border-left: 2px solid #ffb855;
+  border-left: 2px solid var(--main-dark);
 }
 
 .footer {
@@ -259,7 +268,7 @@ hr {
 
 .footer-div a {
   text-decoration: none;
-  color: #e2db99;
+  color: var(--main-light);
   font-size: 1.2em;
   transition: all .3s;
   font-family: 'Roboto Serif', serif;
@@ -293,7 +302,7 @@ hr {
   }
 
   .footer-div a:hover {
-    color: #f4d03f;
+    color: var(--main-dark);
     transition: all .3s;
   }
 
